<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="purchase_string">Purchase Image</string>
    <string name="consumable_sku">com.example.inappdemo.fireworks</string>
    <string name="load_interstitial">Load Interstitial</string>
    <string name="more_apps">Load More Apps</string>
    <string name="buy_string">Buy a click</string>
    <string name="clickme_string">Click Me</string>
    <string name="trackMiscRevenueGeneratingEventOfType">Misc Revenue</string>
    <string name="trackCustomEventOfType">Custom Event</string>
    <string name="trackInGameScore">Game Score</string>
    <string name="trackPlayerCurrencyBalance">Currency Balance</string>
    <string name="preload_interstitial">Preload Interstitial</string>
    <string name="preload_more_apps">Preload More Apps</string>
    <string name="clear_preload_data">Clear Preload Data</string>
    <string name="record_purchase">Record Purchase</string>
    <string name="app_name">CBSample</string>
    <string name="run_tests">Run Tests</string>
    <string name="track_event">Track Event</string>
    <string name="goto_b">Go To Test B</string>
    <string name="goto_c">Go To Test C</string>
    <string name="goto_pit">Pos Install Tracking</string>
    <string name="goto_amazoniap">Amazon IAP</string>
    <string name="goto_simple">Go To Simple</string>
    <string name="goto_a">Go To Test A</string>
    <string name="goto_test">Go To Unit Tests</string>
    <string name="earn">Earn Coins</string>
    <string name="spend">Spend Coins</string>
    <string name="reset_store">Reset Store</string>
    <string name="print_balances">Print Balances</string>
    <string name="show_store">Show Store</string>
    <string name="orientation_text">Override orientation:</string>
    <string name="orientation_prompt">Choose a forced orientation.</string>
    <string name="imp_use_act">Impressions Use Activities</string>
    <string name="load_video">Load Rewarded Video</string>
    <string name="preload_video">Preload Rewarded Video</string>
    <string name="base64EncodedPublicKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAomv72ow5Yv4eA9r56NZFfHpDru/A42RcuwS1EOzhLKq6sQrUxbGsDreR0rT8TsI36QdWhumH/ltyS5idt8TWRR4S6CLHgVoL+u42KeW6xA2Tz+1RoJ4N3umg6LpELzWQl4owN5MH9kfeSIi3WIpKKmHJO6GOT+O+y8ph6CJnCqXqlKONxH0Mdhc58ANjuv+ZHzjsdZVDl2NTX7OKzm5PD2bXXdtLu1X6eLoKfbDWCODgynAdQjJHFs4Ag+qEt/s3BGHllJPrhK7uy9B7NdhqboCivufjEqVtB8aKcv2Uklv7Fselj2ZLku9Hs8lfOSginKfiNiYe5CKlFZjBTtb7vwIDAQAB</string>    
    <string-array name="orientation_choices">
        <item>None</item>
        <item>Portrait</item>
        <item>Landscape</item>
        <item>Reverse Portrait</item>
        <item>Reverse Landscape</item>
    </string-array>
</resources>
