<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#3242BA"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    >
	<LinearLayout  android:layout_width="fill_parent" android:layout_height="70dp" android:orientation="horizontal">
	    <Button  
	        android:layout_margin="10dp" 
	        android:layout_height="fill_parent" 
	        android:layout_width="0dp" 
	        android:layout_weight="0.5" 
	        android:text="@string/goto_a"
	    	android:onClick="gotoActivityA">
	        
	    </Button>
	    <Button  
	        android:layout_margin="10dp" 
	        android:layout_height="fill_parent" 
	        android:layout_width="0dp" 
	        android:layout_weight="0.5" 
	        android:text="@string/goto_b"
	    	android:onClick="gotoActivityB">
	        
	    </Button>
	</LinearLayout>
	<LinearLayout  
	    android:layout_width="fill_parent" 
	    android:layout_height="70dp" 
	    android:orientation="horizontal">
	    <Button  
	        android:layout_margin="10dp" 
	        android:layout_height="fill_parent" 
	        android:layout_width="0dp" 
	        android:layout_weight="0.5" 
	        android:text="@string/goto_c"
	    	android:onClick="gotoActivityC">
	    </Button>
	    <Button  
	        android:layout_margin="10dp"
	        android:layout_height="fill_parent" 
	        android:layout_width="0dp" 
	        android:layout_weight="0.5" 
	        android:text="@string/goto_simple"
	    	android:onClick="gotoActivitySimple">
	        
	    </Button>
	</LinearLayout>
	<LinearLayout  
	    android:layout_width="fill_parent" 
	    android:layout_height="70dp" 
	    android:orientation="horizontal">
	    <Button  
	        android:layout_margin="10dp" 
	        android:layout_height="fill_parent" 
	        android:layout_width="0dp" 
	        android:layout_weight="0.5" 
	        android:text="@string/goto_pit"
	    	android:onClick="gotoGoogleActivityIAP">
	    </Button>
	   <Button  
	        android:layout_margin="10dp" 
	        android:layout_height="fill_parent" 
	        android:layout_width="0dp" 
	        android:layout_weight="0.5" 
	        android:text="@string/goto_amazoniap"
	    	android:onClick="gotoAmazonActivityIAP">
	    </Button>
	</LinearLayout>
</LinearLayout>
